--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+/*BARRA DE NAVEGACIÓN*/
+
 .navbar{
     width: 100%;
     height: 90px;
@@ -39,4 +41,45 @@ body{
     height: 40px;
     margin-top: 23px;
     margin-right: 135px;
+}
+
+/*CONTENEDOR PRINCIPAL*/
+
+.contenedor{
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    color: rgb(43, 43, 43);
+}
+
+.texto-resaltado{
+    color:#8D72E1;
+    font-size: 55px;
+}
+
+.contenedor-principal{
+    padding-top: 160px;
+}
+
+.contenedor-principal p{
+    margin: 15px 0;
+}
+
+.contenedor-principal .boton {
+    background-color: #8D72E1;
+    color: white;
+    border-radius: 25px;
+    text-transform: uppercase;
+    border:none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    height: 40px;
+    padding: 0 33px;
+    margin-top: 15px;
+}
+
+.contenedor-imagen img{
+    width: 500px;
+    margin-left: 100px;
 }
