--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body{
 }
 
 .contenedor-principal{
-    padding-top: 160px;
+    padding-top: 130px;
 }
 
 .contenedor-principal p{
@@ -83,3 +83,48 @@ body{
     width: 500px;
     margin-left: 100px;
 }
+
+/*SKILLS*/
+
+.contenedor-secundario{
+    background-color: #f4faff;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+}
+
+.contenedor-secundario h2{
+    font-size: 45px;
+    padding-bottom: 30px;
+}
+
+.contenedor-secundario p{
+    padding: 10px 350px 30px 350px;
+}
+
+.contenedor-tarjetas{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+}
+
+.tarjeta{
+    border: 1px solid rgb(199, 199, 199);
+    width: 230px;
+    height: 230px;
+    margin: 15px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+
+.tarjeta img{
+    width: 100px;
+    padding-bottom: 20px;
+}
+
+/*SOBRE MÍ*/
+
