--- a/style.css
+++ b/style.css
@@ -323,6 +323,10 @@ form input {
     padding-left: 15px;
 }
 
+form input:focus{
+    outline: 2px solid #8D72E1;
+}
+
 .informacion-principal{
     display: flex;
 }
@@ -349,6 +353,10 @@ textarea{
     background-color: rgb(248, 248, 248);
     padding-left: 15px;
     padding-top: 10px;
+}
+
+textarea:focus{
+    outline: 2px solid #8D72E1;
 }
 
 .boton-envio:hover{
