--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ body{
 .tarjeta:hover{
     border: 1px solid #8D72E1;
     color: #8D72E1;
+    box-shadow: 1px 2px 10px #8D72E1;
 }
 
 .tarjeta img{
