--- a/style.css
+++ b/style.css
@@ -8,12 +8,18 @@ body{
 
 /*BARRA DE NAVEGACIÓN*/
 
+header{
+    position: sticky;
+    top: 0;
+}
+
 .navbar{
     width: 100%;
     height: 90px;
     box-shadow: 2px 2px 10px rgb(192, 190, 190);
     display:flex;
     justify-content: flex-end;
+    background-color: white;
 }
 
 .secciones{
