--- a/style.css
+++ b/style.css
@@ -415,3 +415,247 @@ footer li{
         background-color: #8D72E1;
         color: white;
 }
+
+
+
+/*MEDIA QUERIES*/
+
+@media (min-width: 750px) and (max-width: 830px) {
+
+    *{
+        margin:0;
+        padding: 0;
+    }
+
+    .navbar{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .navbar .boton{
+        margin: 25px 0;
+    }
+
+    .contenedor{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contenedor-principal{
+        padding-bottom: 100px;
+    }
+
+    .contenedor-flotante{
+        display:flex;
+        flex-direction: column;
+    }
+
+    .contenedor-secundario p{
+        padding: 10px 150px;
+    }
+
+    .contenedor-tarjetas{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .tarjeta{
+        width: 200px;
+        height: 200px;
+    }
+
+    .contenedor-terciario{
+        height: 500px;
+    }
+
+    .contenedor-terciario p{
+        margin: 0 100px;
+    }
+
+    .contenedor-flotante{
+        height: 1100px;
+    }
+
+    .contacto p{
+        padding: 10px 0;
+        width: 490px;
+    }
+
+    .redes-sociales{
+        padding-top: 30px;
+    }
+}
+
+@media (min-width: 360px) and (max-width: 450px) {
+
+    header{
+        position: static;
+    }
+
+    .navbar{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+    }
+
+    .secciones{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-left: 0;
+    }
+
+    .secciones li{
+        padding: 5px 4px;
+    }
+
+    .navbar .boton{
+        margin-left: 132px;
+    }
+
+    .contenedor{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contenedor-principal{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .contenedor-imagen{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contenedor-imagen img{
+        width: 300px;
+        margin-left: 0;
+        margin-top: 30px;
+    }
+
+    .contenedor-secundario p{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .contenedor-tarjetas{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .tarjeta{
+        width: 150px;
+        height: 150px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .tarjeta img{
+        width: 50px;
+    }
+
+    .tarjeta h4{
+        font-size: 15px;
+    }
+
+    .contenedor-terciario{
+        height: 500px;
+    }
+
+    .contenedor-terciario p{
+        margin:0;
+        padding: 0 20px;
+        font-size: 15px;        
+    }
+
+    .tarjeta a{
+        font-size: 15px;
+    }
+
+    .contenedor-flotante{
+        display:flex;
+        flex-direction: column;
+        width: 320px;
+        align-items: center;
+        height: 1150px;
+    }
+
+    .contacto{
+        padding-left: 10px;
+        width: 250px;
+    }
+
+    .contacto h2{
+        font-size: 30px;
+        padding-left: 5px;
+    }
+
+    .contacto p{
+        width: 240px;
+        padding-left: 3px;
+        padding-right: 50px;
+    }
+
+    .redes-sociales{
+        padding-left: 0;
+    }
+
+    .formulario{
+        padding-left: 10px;
+        padding-right: 0;
+        width: 250px;
+    }
+
+    .formulario h2{
+        font-size: 30px;
+        padding-left: 5px;
+    }
+
+    .informacion-principal{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contacto-apellido{
+        padding-left: 0;
+    }
+
+    .email{
+        width: 200px;
+    }
+
+    textarea{
+        width: 220px;
+    }
+
+    .boton-envio{
+        width: 236px;
+    }
+
+    .contenedor-final .lista-final{
+        padding-left: 0;
+    }
+
+    .lista-final{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contenedor-final .redes-sociales{
+        display: flex;
+        flex-direction: row;
+    }
+}
