--- a/styles/style.css
+++ b/styles/style.css
@@ -432,6 +432,49 @@ button.btn__demo__secundario{
 
 /*CONTACTO*/
 
+div.contenedor__contacto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+form.formulario__contenedor{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+input.input_form{
+    margin: 10px 0;
+    width: 350px;
+    height: 35px;
+    border-radius: 40px;
+    border: 1px solid #FFD1DA;
+    outline: none;
+    padding-left: 20px;
+    font-family: 'Montserrat', sans-serif;
+    box-shadow: 2px 1px 4px #ffd1da;
+    color: #4D2A33;
+}
+
+input.input_form:focus{
+    border-bottom: 1px 1px 4px #b8145e;
+}
+
+textarea.textarea_form{
+    margin: 10px 0;
+    width: 350px;
+    border-radius: 20px;
+    border: 1px solid #FFD1DA;
+    outline: none;
+    padding-top: 15px;
+    padding-left: 20px;
+    font-family: 'Montserrat', sans-serif;
+    box-shadow: 2px 1px 4px #ffd1da;
+    color: #4D2A33;
+}
 
 /*FOOTER*/
 
